# sts-arena

./: .gitignore  .gitmodules  CLAUDE.md  README.md  dev.sh  justfile  notes.txt  pom.xml  release.sh
.beads/: config.yaml  issues.jsonl
.claude/: settings.json  settings.local.json
.claude/hooks/: check-stop.sh
.devcontainer/: Dockerfile  devcontainer.json
acceptance_tests/: arena_communicator.py  communicator.py  conftest.py  exploratory_agent.py  game_runner.py  pyproject.toml  run_agent.py  screenshot.py  simple_test.py  test_arena_transitions.py  test_basic.py  test_exploratory.py  test_generate_screenshots.py  test_hypothesis_stateful.py  test_state_machine.py  test_user_stories.py
docs/: USER_STORIES.md  generate_screenshots.py  index.html  styles.css
docs/cards/: README.md  defect.md  ironclad.md  silent.md  watcher.md
scripts/: headless-mod-load-test.sh  headless-patch-test.sh  run-acceptance-tests.sh  run-mts-xvfb.sh  test-arena.sh  validate-patches.sh  validate-with-modthespire.sh
src/main/java/stsarena/: STSArena.java
src/main/java/stsarena/arena/: ArenaRunner.java  ArenaSaveManager.java  LoadoutBuilder.java  LoadoutConfig.java  LoadoutGeneratorTest.java  RandomLoadoutGenerator.java  SaveFileManager.java
src/main/java/stsarena/communication/: ArenaBackCommand.java  ArenaCommand.java  ArenaCreatorCommand.java  ArenaLoadoutCommand.java  ArenaScreenCommand.java  ArenaStateCommand.java  CursorHideCommand.java  DamageCommand.java  LeaveArenaCommand.java  (+6 more)
src/main/resources/: ModTheSpire.json
src/test/java/stsarena/: GdxTestRunner.java
(+40 files in other folders)
