[project]
name = "acceptance-tests"
version = "0.1.0"
description = "STS Arena acceptance tests using CommunicationMod"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.0",
    "hypothesis>=6.0",
    "spirecomm",
]

[tool.uv.sources]
spirecomm = { path = "../external/spirecomm", editable = true }
