[project]
name = "acceptance-tests"
version = "0.1.0"
description = "STS Arena acceptance tests using CommunicationMod"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.0",
    "hypothesis>=6.0",
    "mss>=9.0",  # For screenshot capture
    "Pillow>=10.0",  # For image processing
    "spirecomm",
]

[tool.uv.sources]
spirecomm = { path = "../external/spirecomm", editable = true }
